# transformer-from-scratch

./: pyproject.toml
notebooks/: step1-one-head-attention.ipynb
notebooks/.ipynb_checkpoints/: step1-one-head-attention-checkpoint.ipynb
