[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = ["Mauro Mariniello"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.3.2"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
